# pawns-ascent

./: .gitignore  CMakeLists.txt  build.sh
src/: Board.h  board.h  game_state.cpp  game_state.h  main.cpp  main.out  piece.h  sha256sum.txt
src/pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h  bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  piece.h  queen.cpp  queen.h  rook.cpp  rook.h
ui/: app-window.slint
ui/components/: banner.slint  board.slint
